[package]
name = "cargo-sysroot"
version = "0.6.2"
authors = ["Diana"]
#
readme = "README.md"
repository = "https://github.com/DianaNites/cargo-sysroot"
description = "Simply and Easily cross-compile the Rust sysroot crates."
license = "MIT OR Apache-2.0"
keywords = ["sysroot", "libcore", "no_std", "cross", "compilation"]
categories = [
    "no-std",
    "embedded",
    "development-tools",
    "development-tools::cargo-plugins",
]
edition = "2018"

[dependencies]
toml = "0.5.6"
fs_extra = "1.1.0"
structopt = "0.3.16"
cargo-toml2 = "1.3.2"
anyhow = "1.0.32"
# cargo_metadata = "0.11.1"

[badges]
maintenance = { status = "experimental" }

[package.metadata.cargo-sysroot]
target = "test"
