[package]
name = "cargo-sysroot"
version = "0.8.0"
authors = ["Diana"]
#
readme = "README.md"
repository = "https://github.com/DianaNites/cargo-sysroot"
description = "Simply and Easily cross-compile the Rust sysroot crates."
license = "MIT OR Apache-2.0"
keywords = ["sysroot", "libcore", "no_std", "cross", "compilation"]
categories = [
    "no-std",
    "embedded",
    "development-tools",
    "development-tools::cargo-plugins",
]
edition = "2018"

[dependencies]
fs_extra = "1.2.0"
structopt = { version = "0.3.21", optional = true }
cargo-toml2 = "1.3.2"
anyhow = "1.0.38"
remove_dir_all = "0.6.1"

[dev-dependencies]
tempfile = "3.2.0"

[badges]
maintenance = { status = "experimental" }

[package.metadata.cargo-sysroot]
target = "x86_64-unknown-uefi"

[features]
default = ["structopt"]

[[bin]]
name = "cargo-sysroot"
path = "src/main.rs"
required-features = ["structopt"]
